syntax = "proto3";

package enclave;

// The Enclave service provides secure operations for trade synchronization
// and data aggregation. All operations return only aggregated, safe data.
service EnclaveService {
  // Process a synchronization job for a user's exchanges
  rpc ProcessSyncJob(SyncJobRequest) returns (SyncJobResponse);

  // Get aggregated metrics for a user
  rpc GetAggregatedMetrics(AggregatedMetricsRequest) returns (AggregatedMetricsResponse);

  // Get snapshot time series (daily snapshots history)
  rpc GetSnapshotTimeSeries(SnapshotTimeSeriesRequest) returns (SnapshotTimeSeriesResponse);

  // Create a user with exchange connection (auto-generates UID)
  rpc CreateUserConnection(CreateUserConnectionRequest) returns (CreateUserConnectionResponse);

  // Health check for the enclave
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request to process a synchronization job
// NOTE: Sync behavior is automatic based on exchange type:
// - IBKR: Auto-backfill from Flex (365 days) on first sync, then current day only
// - Crypto: Current snapshot only (DailySyncScheduler handles midnight UTC syncs)
message SyncJobRequest {
  string user_uid = 1;
  string exchange = 2; // Optional, if not provided syncs all exchanges
  // DEPRECATED: type is ignored - sync behavior is automatic
  enum SyncType {
    INCREMENTAL = 0;
    HISTORICAL = 1;
    FULL = 2;
  }
  SyncType type = 3; // Deprecated, kept for backwards compatibility
}

// Response from processing a synchronization job
message SyncJobResponse {
  bool success = 1;
  string user_uid = 2;
  string exchange = 3;
  int32 synced = 4;                    // Number of trades synced
  int32 snapshots_generated = 5;       // Number of daily snapshots created

  message Snapshot {
    double balance = 1;
    double equity = 2;
    int64 timestamp = 3;
  }
  Snapshot latest_snapshot = 6;
  string error = 7;
}

// Request for aggregated metrics
message AggregatedMetricsRequest {
  string user_uid = 1;
  string exchange = 2; // Optional
}

// Response with aggregated metrics
message AggregatedMetricsResponse {
  double total_balance = 1;
  double total_equity = 2;
  double total_realized_pnl = 3;
  double total_unrealized_pnl = 4;
  double total_fees = 5;
  int32 total_trades = 6;
  int64 last_sync = 7; // Unix timestamp, nullable
}

// Request for snapshot time series
message SnapshotTimeSeriesRequest {
  string user_uid = 1;
  string exchange = 2; // Optional
  int64 start_date = 3; // Unix timestamp (milliseconds), optional
  int64 end_date = 4;   // Unix timestamp (milliseconds), optional
}

// Response with snapshot time series
message SnapshotTimeSeriesResponse {
  repeated DailySnapshot snapshots = 1;
}

// Daily snapshot data point
message DailySnapshot {
  string user_uid = 1;
  string exchange = 2;
  int64 timestamp = 3; // Unix timestamp (milliseconds) - daily snapshot at 00:00 UTC
  double total_equity = 4; // Total account value (realized + unrealized)
  double realized_balance = 5; // Available cash/balance
  double unrealized_pnl = 6; // Unrealized P&L from open positions
  double deposits = 7; // Cash deposited on this day
  double withdrawals = 8; // Cash withdrawn on this day
  MarketBreakdown breakdown = 9; // Market breakdown (spot/swap/options)
}

// Market breakdown for a snapshot
// Supports both crypto (spot/swap) and traditional (stocks/futures/cfd)
message MarketBreakdown {
  MarketMetrics global = 1;
  // Crypto categories
  MarketMetrics spot = 2;
  MarketMetrics swap = 3;
  // Traditional categories (IBKR, etc.)
  MarketMetrics stocks = 5;
  MarketMetrics futures = 6;
  MarketMetrics cfd = 7;
  MarketMetrics forex = 8;
  MarketMetrics commodities = 9;
  // Shared
  MarketMetrics options = 4;
}

// Metrics per market type
message MarketMetrics {
  double equity = 1;
  double available_margin = 2;
  double volume = 3;
  int32 orders = 4;
  double trading_fees = 5;
  double funding_fees = 6; // Only for swap/perp markets
}

// Request to create a user with exchange connection
message CreateUserConnectionRequest {
  string exchange = 1;          // Exchange name (e.g., "binance", "coinbase")
  string label = 2;              // User-friendly label (e.g., "Main Account")
  string api_key = 3;            // API key (will be encrypted)
  string api_secret = 4;         // API secret (will be encrypted)
  string passphrase = 5;         // Optional passphrase (will be encrypted)
}

// Response from creating a user with exchange connection
message CreateUserConnectionResponse {
  bool success = 1;
  string user_uid = 2;          // Auto-generated UID for the user
  string error = 3;             // Error message if success=false
}

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  enum Status {
    HEALTHY = 0;
    UNHEALTHY = 1;
  }
  Status status = 1;
  bool enclave = 2;
  string version = 3;
  double uptime = 4;
}